--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,4 +5,40 @@
   width: 360px;
 }
 
+.header {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: start;
+}
 
+.header__menu {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-between;
+  align-items: start;
+}
+
+.header__link {
+  font-family: 'Inter', sans-serif;
+  color: #FFF;
+  font-size: 16px;
+  font-weight: 400;
+  text-decoration: underline;
+  line-height: 1.2;
+  opacity: 1;
+}
+
+.header__link:hover {
+  opacity: 0.7;
+}
+
+.header__link_active {
+  text-decoration: none;
+}
+
+.header__logo {
+  height: 16px;
+  width: 80px;
+  display: block
+}
