--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,6 +3,8 @@
   padding: 24px 20px;
   background-color: #000;
   width: 360px;
+  border: none;
+  margin: 0 auto;
 }
 
 .header {
@@ -17,11 +19,13 @@
   flex-flow: column nowrap;
   justify-content: space-between;
   align-items: start;
+  min-width: 84px;
+  row-gap: 12px;
 }
 
 .header__link {
   font-family: 'Inter', sans-serif;
-  color: #FFF;
+  color: #F5F5F5;
   font-size: 16px;
   font-weight: 400;
   text-decoration: underline;
