--- a/styles/styles.css
+++ b/styles/styles.css
@@ -204,4 +204,93 @@
 font-weight: 700;
 }
 
+.how-to {
+  padding: 40px 20px 60px 20px;
+  border-bottom: solid 1px #FEE42A;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: start;
+  align-items: start;
+  row-gap: 32px;
+}
 
+.cards-list {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: start;
+  align-items: start;
+  row-gap: 32px;
+  margin: 0;
+  padding: 0;
+}
+
+.card {
+  box-sizing: border-box;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: start;
+  align-items: start;
+  row-gap: 8px;
+  padding: 20px;
+  border-radius: 30px;
+}
+
+.card_theme_dark {
+  color:#F5F5F5;
+  background-color: #343434;
+}
+
+.card_theme_bright {
+  color: #131313;
+  background-color: #FEE42A;
+}
+
+.card__list-item {
+  list-style: none outside;
+}
+
+.card__author {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: start;
+  align-items: start;
+  row-gap: 8px;
+}
+
+.card__author-photo {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+}
+
+.card__author-name {
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 1.35;
+  text-align: start;
+  margin: 0;
+
+}
+
+.card__content {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: start;
+  align-items: start;
+  row-gap: 8px;
+}
+.card__title {
+  margin: 0;
+  font-family: 'EB Garamond';
+  font-size: 22px;
+  font-weight: 500;
+  line-height: 1.35;
+  text-align: start;
+}
+
+.card__text {
+  margin: 0;
+  font-size: 16px;
+  line-height: 1.35;
+  text-align: start;
+}
