--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,7 @@
   background-color: #1e1e1e;
   border: none;
   margin: 0;
-  font-family: 'Inter', sans-serif;
+  font-family: 'Inter', 'Arial', 'Helvetica', 'Segoe UI', 'Roboto', 'San Francisco', sans-serif;
   font-weight: 400;
   display: flex;
   flex-flow: column nowrap;
@@ -20,7 +20,7 @@
 
 .content__section-subtitle {
   width: 100%;
-  font-family: 'EB Garamond';
+  font-family: 'EB Garamond','Georgia', 'Palatino Linotype', 'Palatino', 'Times New Roman', serif;
   font-weight: 500;
   font-size: 28px;
   line-height: 1.13;
@@ -118,7 +118,7 @@
 
 .cover__title {
   display: block;
-  font-family: 'EB Garamond';
+  font-family: 'EB Garamond', 'Georgia', 'Palatino Linotype', 'Palatino', 'Times New Roman', serif;
   font-size: 72px;
   font-weight: 400;
   line-height: 1;
@@ -284,7 +284,7 @@ font-weight: 700;
 }
 .card__title {
   margin: 0;
-  font-family: 'EB Garamond';
+  font-family: 'EB Garamond','Georgia', 'Palatino Linotype', 'Palatino', 'Times New Roman', serif;
   font-size: 22px;
   font-weight: 500;
   line-height: 1.35;
