--- a/styles/style.css
+++ b/styles/style.css
@@ -64,7 +64,7 @@
   flex-flow: row nowrap;
   justify-content: space-between;
   align-items: start;
-  padding: 24px 20px;
+  padding: 24px 20px 30px 20px;
   }
 
 .header__menu {
@@ -113,7 +113,7 @@
   background-position: center right;
   background-repeat: no-repeat;
   min-height: 220px;
-  padding: 20px 0;
+  padding: 0 0 15px 0;
 }
 
 .cover__title {
@@ -128,7 +128,7 @@
 }
 
 .intro {
-  padding: 30px 20px 40px 20px;
+  padding: 20px 20px 40px 20px;
   display: flex;
   flex-flow: column nowrap;
   justify-content: start;
